--- a/green-yummy/src/main/resources/static/public/css/dataSearchDetail2.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearchDetail2.css
@@ -1,5 +1,7 @@
 
-
+.recommandDetail, .detailType{
+	text-overflow: ellipsis;
+}
 .recommandDetail{
 	padding: 10px 0 10px 0;
 	font: normal bold 15pt 'sans-serif';
