--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -110,23 +110,32 @@
     list-style-type: none; 
     padding: 0;          
     margin: 0;  
+    border-radius: 50px;
     background: salmon;
     width:1280px;
 }
 
 .search-list li {
-    cursor: pointer;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
+    box-sizing: border-box;
+	cursor: pointer;
+	height: 40px;
+	padding: 10px 20px 10px 20px;
+	margin: 10px;
+	font: normal bold 13pt 'sans-serif';
+	
+	border-radius: 50px;
 }
 
 .search-list li:hover {
-    background-color: #f0f0f0;
+/*     background-color: #f0f0f0; */
+	background-color: lemonchiffon;
+	transition: 200ms ease-in-out;
 }
 
 .list-show {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px; 
 }
 
