--- a/green-yummy/src/main/resources/static/index/css/indexRecommand.css
+++ b/green-yummy/src/main/resources/static/index/css/indexRecommand.css
@@ -48,6 +48,7 @@ hr{
     width: 380px; 
     height: 400px; 
     margin: 0 20px 0 20px;
+    cursor: pointer;
     box-shadow: 0 5px 10px 1px gray;
 }
 
