유저 정보 수정 수정

--- a/green-yummy/src/main/resources/static/public/css/userRegistChange.css
+++ b/green-yummy/src/main/resources/static/public/css/userRegistChange.css
@@ -57,7 +57,7 @@ input[type="text"], input[type="password"], select{
     outline: none;
     background: #f2f2f2;
 }
-input[type="text"]{
+input[type="text"], input[type="password"]{
 	box-sizing: border-box;
 	padding: 10px;
 }
