--- a/green-yummy/src/main/resources/static/public/css/dataSearchDetail.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearchDetail.css
@@ -332,4 +332,31 @@ label {
 
 }
 
+/*페이지*/
+.pagination {
+	display: flex;
+	justify-content: center;
+	padding: 0;
+	margin-top: 20px;
+	text-align: center;
+	font-size: 20px;
+}
 
+.pagination span {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 20px;
+	height: 20px;
+	margin: 0 5px 0 5px;
+	cursor: pointer;
+	padding: 10px;
+	font-weight: bold;
+	border: 2px solid salmon;
+	border-radius: 5px;
+}
+
+.pagination span.current {
+	background-color: #feedeb;
+	color: #b31706;
+}
