dataSearch 리스트 정렬

--- a/green-yummy/src/main/resources/static/public/css/dataSearch.css
+++ b/green-yummy/src/main/resources/static/public/css/dataSearch.css
@@ -149,17 +149,27 @@ input[type="radio"]{
 /* } */
 
 /*가게 리스트*/
-#shop-list {
-	display: flex;
-	flex-wrap: wrap;
+#shop-list{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: repeat(3, 1fr);
+	align-content: center;
+	justify-items: center;
 	gap: 20px;
-	width: 100%;
-	max-width: 1280px;
-	margin: 0 auto;
-	box-sizing: border-box;
 	margin-top: 20px;
-	justify-content: center;
 }
+
+/* #shop-list { */
+/* 	display: flex; */
+/* 	flex-wrap: wrap; */
+/* 	gap: 20px; */
+/* 	width: 100%; */
+/* 	max-width: 1280px; */
+/* 	margin: 0 auto; */
+/* 	box-sizing: border-box; */
+/* 	margin-top: 20px; */
+/* 	justify-content: center; */
+/* } */
 
 .shop-item {
 	width:600px;
