--- a/green-yummy/src/main/resources/static/public/css/pictureOCR.css
+++ b/green-yummy/src/main/resources/static/public/css/pictureOCR.css
@@ -68,6 +68,8 @@ h4{
 	width: 100%;
 	height: 100px;
 	padding: 10px;
+	padding-bottom: 0;
+	margin-top: 20px;
 }
 .searchContainer::before{
 	content:"";
@@ -142,3 +144,16 @@ input[type="file"]{
     height: 50px;
 }
 
+.searchButton{
+	display: flex;
+	justify-content: center;
+	margin-bottom : 20px;
+}
+.searchButton input[type="submit"]{
+	background : salmon;
+	border: none;
+	height: 30px;
+	width: 130px;
+	font-weight: bold;
+	border-radius: 3px;
+}
