ocr 테스트 , 메인 이미지 추가

--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -173,7 +173,12 @@
 	height: 540px;
 	overflow: hidden;
 	
+	
 	/* border: 1px solid red; */
+}
+.eventImgCon::before{
+	content: "";
+	background: lemonchiffon;
 }
 
 .eventImgList{
