--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -3,6 +3,7 @@
 
 /* 컨테이너 */
 .outContainer {
+	position: relative;
 	flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -176,10 +177,18 @@
 	
 	/* border: 1px solid red; */
 }
-.eventImgCon::before{
-	content: "";
-	background: lemonchiffon;
-}
+/* .eventImgCon::before{ */
+/* 	content: ""; */
+/* 	background: lemonchiffon; */
+/* 	position: absolute; */
+/* 	z-index: -50; */
+/* 	top: 10; */
+/* 	left: 0; */
+/* 	right: 0; */
+/* 	bottom: 0; */
+/* 	width: 100%; */
+/* 	height: 740px; */
+/* } */
 
 .eventImgList{
 	position: relative;
