--- a/green-yummy/src/main/resources/static/index/css/indexRecommand.css
+++ b/green-yummy/src/main/resources/static/index/css/indexRecommand.css
@@ -53,10 +53,16 @@ hr{
     box-shadow: 0 5px 10px 1px gray;
 }
 
-.recommandImg{
+.recommandImgCon{
     width: 380px; 
     height: 300px; 
+    overflow: hidden;
 /*     background-color: lightgray;  */
+}
+.recommandImg{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 .recPrevBtn,
 .recNextBtn{
