--- a/green-yummy/src/main/resources/static/index/css/index.css
+++ b/green-yummy/src/main/resources/static/index/css/index.css
@@ -174,21 +174,22 @@
 	height: 540px;
 	overflow: hidden;
 	
+	margin: 100px 0 100px 0;
 	
 	/* border: 1px solid red; */
 }
-/* .eventImgCon::before{ */
-/* 	content: ""; */
-/* 	background: lemonchiffon; */
-/* 	position: absolute; */
-/* 	z-index: -50; */
-/* 	top: 10; */
-/* 	left: 0; */
-/* 	right: 0; */
-/* 	bottom: 0; */
-/* 	width: 100%; */
-/* 	height: 740px; */
-/* } */
+.eventImgCon::before{
+	content: "";
+	background: lemonchiffon;
+	position: absolute;
+	z-index: -50;
+	top: 230px;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 740px;
+}
 
 .eventImgList{
 	position: relative;
@@ -205,12 +206,7 @@
     width: 1280px;
     height: 500px;
 }
-/* .mainImg:nth-child(1){ */
-/* 	background-image: url("/resources/static/images/mainimg1.jpg"); */
-/* } */
-/* .mainImg:nth-of-type(2){ */
-/* 	background-image: url("/images/pasta.jpg"); */
-/* } */
+
 .mainImg img{
 	width: 1280px;
 	height: 500px;
@@ -234,10 +230,10 @@
 }
 
 .mainPrevBtn{
-	top: 320px;
+	top: 420px;
 	left: -690px;
 }
 .mainNextBtn{
-	top: -320px;
+	top: -420px;
 	left: 690px;
 }
